# Fildem

./: README.md  meson.build
data/: org.fildem.hud.desktop
docs/: DBUS_API_V1.md  IMPLEMENTATION_PLAN_REAL.md  REWRITE_PLAN_IT.md
interfaces/: org.fildem.v1.Activation.xml  org.fildem.v1.Hud.xml  org.fildem.v1.MenuTree.xml  org.fildem.v1.TopLevel.xml  org.fildem.v1.Window.xml  org.fildem.v1.WindowActions.xml
packaging/arch/: PKGBUILD  README.md
packaging/deb/: README.md  control  rules
packaging/fedora/: README.md  fildem.spec
packaging/systemd/: fildemd.service
src/: meson.build
src/core/: fildem-core.h  fildem-error.c  fildem-error.h  fildem-menu-cache.c  fildem-menu-cache.h  fildem-menu-model.c  fildem-menu-model.h  fildem-menu-registry.c  fildem-menu-registry.h  fildem-serializer.c  fildem-serializer.h  meson.build
src/ctl/: fildemctl.c  meson.build
src/daemon/: fildemd.c  meson.build
src/extension/fildem-shell@fildem.org/: daemon-client.js  extension.js  metadata.json  panel-controller.js  prefs.js  shortcut-manager.js  window-actions.js  window-tracker.js
src/extension/fildem-shell@fildem.org/schemas/: org.fildem.shell.gschema.xml
src/hud/: fildemhud.c  meson.build
tests/: meson.build  test-contract.c  test-core.c
